--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "version": "0.0.1",
     "dependencies": {
         "crypto-js": "^3.1.9-1"
+    },
+    "devDependencies": {
+        "jest": "^21.2.1"
     }
 }
