--- a/package.json
+++ b/package.json
@@ -6,5 +6,13 @@
     },
     "devDependencies": {
         "jest": "^21.2.1"
+    },
+    "jest": {
+        "collectCoverage": true,
+        "coverageDirectory": "test/coverage"
+    },
+    "scripts": {
+        "start": "node main.js",
+        "test": "jest"
     }
 }
